--- a/src/main/java/GUI/administrador/VerRegistro.form
+++ b/src/main/java/GUI/administrador/VerRegistro.form
@@ -34,7 +34,7 @@
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jTextField1" min="-2" pref="98" max="-2" attributes="0"/>
-                      <EmptySpace pref="37" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Component id="ver" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
